[WinCairo] SVG path not rendered with all-zero dasharray https://bugs.webkit.org/show_bug.cgi?id=146997

Patch by Jinyoung Hur <hur.ims@navercorp.com> on 2015-07-22
Reviewed by Martin Robinson.

Source/WebCore:

All-zero dash array should not be passed to cairo_set_dash() as an argument, because it will cause an internal Cairo error.
Rather call cairo_set_dash() with num_dashes=0 to disable dash line.

Tests: fast/canvas/canvas-lineDash.html
       svg/custom/zero-dasharray.html

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::setLineDash):

LayoutTests:

Canvas 2D context and SVG stroke tests with all-zero dash array are added.

* fast/canvas/canvas-lineDash-expected.txt:
* fast/canvas/script-tests/canvas-lineDash.js:
* svg/custom/zero-dasharray.html: Added
* svg/custom/zero-dasharray-expected.html: Added

Canonical link: https://commits.webkit.org/165243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187171 268f45cc-cd09-0410-ab3c-d52691b4dbfc